// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupButton /> should render with left direction 1`] = `
<Styled(div)
  direction="left"
/>
`;

exports[`<GroupButton /> should render with right direction by default 1`] = `
<Styled(div)
  direction="right"
/>
`;
